--- a/pepeizqs deals web/Pages/Componentes/Secciones/Noticia.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Noticia.razor
@@ -230,13 +230,16 @@
 						{
 							foreach (var id in ids)
 							{
-								var gratis = BaseDatos.Gratis.Buscar.UnJuego(int.Parse(id), null);
+								var gratis = BaseDatos.Gratis.Buscar.UnGratis(id);
 
-								<a href="@Herramientas.EnlaceAcortador.Generar(gratis.Enlace, gratis.Tipo, usuarioPatreon)" class="boton-pequeño" style="padding: 2px;" target="_blank">
-									<div>
-										<img src="@gratis.Imagen" style="max-width: 100%; max-height: 100%;" alt="@gratis.Nombre" />
-									</div>
-								</a>
+								if (gratis != null)
+								{
+									<a href="@Herramientas.EnlaceAcortador.Generar(gratis.Enlace, gratis.Tipo, usuarioPatreon)" class="boton-pequeño" style="padding: 2px;" target="_blank">
+										<div>
+											<img src="@gratis.Imagen" style="max-width: 100%; max-height: 100%;" alt="@gratis.Nombre" />
+										</div>
+									</a>
+								}
 							}
 						}
 					}
