--- a/pepeizqs deals web/Pages/Componentes/Admin/Enlaces.razor
+++ b/pepeizqs deals web/Pages/Componentes/Admin/Enlaces.razor
@@ -99,10 +99,6 @@
         </div>
 
         <div>
-            <a class="boton-pequeño" href="https://members.cj.com/member/publisher/home.do" style="text-decoration: none; text-align: center; padding: 8px 16px;" target="_blank">Comission Junction</a>
-        </div>
-
-        <div>
             <a class="boton-pequeño" href="https://www.macgamestore.com/affiliate/" style="text-decoration: none; text-align: center; padding: 8px 16px;" target="_blank">WinGameStore</a>
         </div>
 
@@ -116,6 +112,14 @@
 
         <div>
             <a class="boton-pequeño" href="https://app.playsum.live/partner-program" style="text-decoration: none; text-align: center; padding: 8px 16px;" target="_blank">Playsum</a>
+        </div>
+
+        <div>
+            <a class="boton-pequeño" href="https://www.gamersgate.com/account/affiliate/" style="text-decoration: none; text-align: center; padding: 8px 16px;" target="_blank">GamersGate</a>
+        </div>
+
+        <div>
+            <a class="boton-pequeño" href="https://partner.dlgamer.com/secure/stats" style="text-decoration: none; text-align: center; padding: 8px 16px;" target="_blank">DLGamer</a>
         </div>
     </div>
 </div>
